--- a/_articles/2019-01-16-test.md
+++ b/_articles/2019-01-16-test.md
@@ -2,5 +2,6 @@
 title: testing
 author: iwang05
 date: 2019-01-27
+link: https://brain2speech.github.io/
 ---
-test post 123
+Description of article/paper will go here 
